--- a/BBB/WebContent/WEB-INF/web.xml
+++ b/BBB/WebContent/WEB-INF/web.xml
@@ -9,4 +9,22 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  
+  <error-page>
+      <error-code>404</error-code>
+      <location>/404page.jsp</location>
+  </error-page>
+   <error-page>
+      <error-code>405</error-code>
+      <location>/404page.jsp</location>
+  </error-page>
+   <error-page>
+      <error-code>406</error-code>
+      <location>/404page.jsp</location>
+  </error-page>
+   <error-page>
+      <error-code>407</error-code>
+      <location>/404page.jsp</location>
+  </error-page>
 </web-app>
